# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

py_binary(
	name = "test_pytorch",
	srcs = ["test_pytorch.py"],
	deps = [
		":symbolic",
	]
)

py_binary(
	name = "symbolic_plant_test",
	srcs = ["symbolic_plant_test.py"],
	deps = [
		":symbolic",
	]
)


py_library(
	name = "symbolic",
	srcs = ["symbolic.py"],
	deps = [
		"@drake//bindings/pydrake",
	]
)
