# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

py_binary(
	name = "test_pytorch",
	srcs = ["test_pytorch.py"],
	deps = [
		"//drake_pytorch:symbolic",
	]
)

py_binary(
	name = "symbolic_plant_test",
	srcs = ["symbolic_plant_test.py"],
	deps = [
		"//drake_pytorch:symbolic",
	]
)

